# DuckGame

./: .gitignore  CMakeLists.txt  Makefile  README.md  installer.sh
cliente/: CMakeLists.txt  DuckAnimacion.cpp  DuckAnimacion.h  cliente.cpp  cliente.h  cliente_leaderboard.cpp  cliente_leaderboard.h  cliente_mapa.cpp  cliente_mapa.h  cliente_mixer.cpp  cliente_mixer.h  cliente_protocolo.cpp  cliente_protocolo.h  cliente_receiver.cpp  cliente_receiver.h  cliente_reciver.h  cliente_sender.cpp  cliente_sender.h  cliente_teclado.cpp  cliente_teclado.h  cliente_zoom_utils.cpp  duck.cpp  duck.h  enemigo.cpp  enemigo.h  lobby.cpp  lobby.h  main.cpp  mapa.cpp  mapa.h  receiver_partidas.cpp  receiver_partidas.h  ventana_esperando.cpp  ventana_esperando.h
cliente/Sdl/: SdlFullscreenMessage.cpp  SdlFullscreenMessage.h  SdlMessage.cpp  SdlMessage.h  SdlText.cpp  SdlText.h  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h
cliente/interfaz_lobby/: mainwindow.cpp  mainwindow.h  resources.qrc
cmake/: CompilerWarnings.cmake
common/: CMakeLists.txt  common_accion.h  common_color.h  common_color_utils.h  common_comando_partida.h  common_direcciones.h  common_escopeta.h  common_evento.h  common_evento_partida.h  common_liberror.cpp  common_liberror.h  common_partida.h  common_pewpew_laser.h  common_pistola_cowboy.h  common_pistola_duelos.h  common_pistola_magnum.h  common_proteccion.h  common_queue.h  common_rifle_ak47.h  common_screen_utils.h  common_serializador.cpp  common_serializador.h  common_sniper.h  common_socket.cpp  common_thread.h  common_weapon.cpp  common_weapon.h  common_weapon_utils.h  estado.h
common/collidables/: Box.cpp  Box.h  Collidable.cpp  Collidable.h  Platform.cpp  Platform.h  Player.cpp  Player.h  SpawnBox.cpp  SpawnBox.h  SpawnPlace.cpp  SpawnPlace.h  SpawnWeaponBox.h
common/weapons/: Escopeta.cpp  Escopeta.h  PistolaCowboy.cpp  PistolaCowboy.h  PistolaDuelos.cpp  PistolaDuelos.h  PistolaMagnum.cpp  PistolaMagnum.h  RifleAK47.cpp  RifleAK47.h  Weapon.cpp  Weapon.h
editor/: CMakeLists.txt  canva.cpp  canva.h  drawable.cpp  drawable.h  drawable_utils.h  editor_resources.qrc  main.cpp  map_editor.cpp  map_editor.h
server/: Box.h  CMakeLists.txt  Collidable.h  DisparoManager.h  Game.h  Platform.h  Player.h  SpawnBox.h  SpawnPlace.h  SpawnWeaponBox.h  Vector.h  bala.cpp  bala.h  collision_utils.cpp  collision_utils.h  foo.cpp  jugador_esperando.cpp  jugador_esperando.h  server_aceptador.cpp  server_aceptador.h  server_gameloop.cpp  server_gameloop.h  server_jugador.cpp  server_jugador.h  server_leaderboard.cpp  server_leaderboard.h  server_lobby.cpp  server_lobby.h  server_main.cpp  server_mapa.cpp  server_mapa.h  server_monitor.cpp  server_monitor.h  server_protocolo.cpp  server_protocolo.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  server_servidor.cpp  (+1 more)
server/mapas/: mapa_1.yaml  mapa_2.yaml  mapa_3.yaml
